--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,15 +1,15 @@
 ---
 galaxy_info:
   author: "Konstantin Shalygin <k0ste@k0ste.ru>"
-  issue_tracker_url: "https://jira.e2e4.ru/"
+  issue_tracker_url: "https://github.com/k0ste/ansible-role-dnf"
   description: "Deploy dnf configuration and dnf repos."
-  company: "LLC Open Technologies"
+  company: "YASB"
   license: "GPL"
-  min_ansible_version: "2.8"
+  min_ansible_version: "3.0.0"
   platforms:
-  - name: EL
-    versions:
-    - 8
+    - name: EL
+      versions:
+        - 8
   categories:
-  - system
+    - system
 dependencies: []
