Role refactoring: dict support & excludes on cleanup task

--- a/tasks/deploy_dnf.yml
+++ b/tasks/deploy_dnf.yml
@@ -1,9 +1,9 @@
 ---
-- name: dnf | Deploy dnf.conf
+- name: "dnf | Deploy dnf.conf"
   ansible.builtin.template:
     src: "dnf.j2"
-    dest: "{{
-      hostvars[inventory_hostname]['dnf_conf_dest'] + '/' + 'dnf.conf' }}"
+    dest: "{{ hostvars[inventory_hostname]['dnf_conf_dest'] + '/' +
+      'dnf.conf' }}"
     owner: "root"
     group: "root"
     mode: "0644"
