--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,15 +1,17 @@
 ---
 galaxy_info:
+  role_name: "dnf"
+  namespace: "none"
   author: "Konstantin Shalygin <k0ste@k0ste.ru>"
   issue_tracker_url: "https://github.com/k0ste/ansible-role-dnf"
-  description: "Deploy dnf configuration and dnf repos."
+  description: "Deploy dnf configuration and dnf repos"
   company: "YASB"
   license: "GPL"
   min_ansible_version: "3.0.0"
   platforms:
-    - name: EL
+    - name: "EL"
       versions:
-        - 8
-  categories:
-    - system
+        - 'all'
+  galaxy_tags:
+    - 'networking'
 dependencies: []
