--- a/tasks/pre_requisite.yml
+++ b/tasks/pre_requisite.yml
@@ -3,7 +3,7 @@
   ansible.builtin.assert:
     that:
       - "hostvars[inventory_hostname]['ansible_pkg_mgr'] is defined"
-    msg: "'ansible_facts' not found. Please enable facts gathering."
+    msg: "'ansible_facts' not found. Please enable facts gathering"
     quiet: "true"
 - name: "dnf | Assert about package manager"
   ansible.builtin.debug:
@@ -16,7 +16,7 @@
     file: "{{ hostvars[inventory_hostname]['ansible_os_family'] + '.yml' }}"
   when:
     - "hostvars[inventory_hostname]['ansible_pkg_mgr'] == 'dnf'"
-- name: "dnf | Set facts about configuration"
+- name: "dnf | Set facts about dnf role"
   ansible.builtin.set_fact:
     dnf_settings_main: "{{ hostvars[inventory_hostname]['dnf'] |
       community.general.json_query('[].main[]') }}"
@@ -24,9 +24,6 @@
       community.general.json_query('[].repos') }}"
     dnf_repos: "{{ hostvars[inventory_hostname]['dnf'] |
       community.general.json_query('[].repos[].file') }}"
-  when:
-    - "hostvars[inventory_hostname]['dnf'] is defined"
-    - "hostvars[inventory_hostname]['dnf'] != ''"
 - name: "dnf | Find exists dnf repos"
   ansible.builtin.find:
     paths: "{{ hostvars[inventory_hostname]['dnf_repos_dest'] }}"
@@ -37,6 +34,8 @@
     excludes: "{{ exclude_dnf_drop_exists | default('[]') }}"
   register: "dnf_find_result"
   when:
+    - "hostvars[inventory_hostname]['dnf'] is defined"
+    - "hostvars[inventory_hostname]['dnf'] != ''"
     - "hostvars[inventory_hostname]['dnf'] |
        community.general.json_query(vars['dnf_drop_exists']) is defined"
     - "hostvars[inventory_hostname]['dnf'] |
