--- a/tasks/pre_requisite.yml
+++ b/tasks/pre_requisite.yml
@@ -20,6 +20,8 @@
   ansible.builtin.set_fact:
     dnf_settings_main: "{{ hostvars[inventory_hostname]['dnf'] |
       community.general.json_query('[].main[]') }}"
+    dnf_settings_automatic: "{{ hostvars[inventory_hostname]['dnf'] |
+      community.general.json_query('[].automatic[]') }}"
     dnf_settings_repos: "{{ hostvars[inventory_hostname]['dnf'] |
       community.general.json_query('[].repos') }}"
     dnf_repos: "{{ hostvars[inventory_hostname]['dnf'] |
