--- a/tasks/pre_requisite.yml
+++ b/tasks/pre_requisite.yml
@@ -3,7 +3,7 @@
   ansible.builtin.assert:
     that:
       - "hostvars[inventory_hostname]['ansible_pkg_mgr'] is defined"
-    msg: "'ansible_facts' not found. Please enable facts gathering"
+    fail_msg: "'ansible_facts' not found. Please enable facts gathering"
     quiet: "true"
 - name: "dnf | Assert about package manager"
   ansible.builtin.assert:
